compiler/test-data/parser/errors/backend/unclosed_brace.frel
module test

backend Counter {
    count : i32 = 0
